// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System|CheckBox CheckBox with Label 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-u4dw6y-CheckBox"
      >
        <span
          className="css-124gikp-CheckBox"
        >
          <input
            checked={false}
            className="css-ik8tl5-CheckBox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
        <span
          className="css-m4bvhz-CheckBox"
        >
          Not checked single
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-u4dw6y-CheckBox"
      >
        <span
          className="css-124gikp-CheckBox"
        >
          <input
            checked={true}
            className="css-jah58l-CheckBox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
        <span
          className="css-m4bvhz-CheckBox"
        >
          Checked Single
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-1mci7ch-CheckBox"
      >
        <span
          className="css-124gikp-CheckBox"
        >
          <input
            checked={true}
            className="css-jah58l-CheckBox"
            disabled={true}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
        <span
          className="css-m4bvhz-CheckBox"
        >
          Disabled single
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-u4dw6y-CheckBox"
      >
        <span
          className="css-124gikp-CheckBox"
        >
          <input
            checked={true}
            className="css-4t51wx-CheckBox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
        <span
          className="css-m4bvhz-CheckBox"
        >
          Checked intermediate
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-u4dw6y-CheckBox"
      >
        <span
          className="css-124gikp-CheckBox"
        >
          <input
            checked={false}
            className="css-91aixk-CheckBox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
        <span
          className="css-m4bvhz-CheckBox"
        >
          Not checked intermediate
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-1mci7ch-CheckBox"
      >
        <span
          className="css-124gikp-CheckBox"
        >
          <input
            checked={true}
            className="css-4t51wx-CheckBox"
            disabled={true}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
        <span
          className="css-m4bvhz-CheckBox"
        >
          Disabled checked intermediate
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System|CheckBox CheckBox without 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-u4dw6y-CheckBox"
      >
        <span
          className="css-124gikp-CheckBox"
        >
          <input
            checked={true}
            className="css-jah58l-CheckBox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-u4dw6y-CheckBox"
      >
        <span
          className="css-124gikp-CheckBox"
        >
          <input
            checked={false}
            className="css-ik8tl5-CheckBox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-u4dw6y-CheckBox"
      >
        <span
          className="css-124gikp-CheckBox"
        >
          <input
            checked={true}
            className="css-4t51wx-CheckBox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-u4dw6y-CheckBox"
      >
        <span
          className="css-124gikp-CheckBox"
        >
          <input
            checked={false}
            className="css-91aixk-CheckBox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-1mci7ch-CheckBox"
      >
        <span
          className="css-124gikp-CheckBox"
        >
          <input
            checked={false}
            className="css-91aixk-CheckBox"
            disabled={true}
            id="styled-checkbox-"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-"
          />
        </span>
      </span>
    </div>
  </div>
</div>
`;
